# cross-agent

./: Cargo.toml  build-push.nu
.cargo/: Config.toml
agent/: Cargo.toml  build-push.nu
agent/src/: lib.rs  main.rs  stream.rs  sys_info.rs
decoder/: Cargo.toml
decoder/src/: main.rs
filesystem-iter/: Cargo.toml
filesystem-iter/src/: file_offline.rs  lib.rs
src/: files.rs  files_iter.rs  main.rs  stream.rs  web_service.rs
