[workspace]
resolver = "3"
members = ["agent", "decoder", "filesystem-iter"]

[workspace.dependencies]
agent.path = "./agent"
anyhow = "1.0.98"
async-fn-stream = "0.2.2"
axum = { version = "0.8.4", features = ["ws"] }
bytes = "1.10.1"
clap = { version = "4.5.38", features = ["derive"] }
filesystem-iter.path = "./filesystem-iter"
futures = "0.3.31"
humanize-bytes = "1.0.6"
log = "0.4.27"
lz4_flex = "0.11.3"
md-5 = "0.10.6"
normpath = "1.3.0"
rkyv = { version = "0.8.10", features = ["bytes-1"] }
sha3 = "0.10.8"
simplelog = "0.12.2"
sysinfo = "0.35.1"
tokio = { version = "1.45.0", features = ["full"] }

[profile.release]
lto = "fat"
panic = "abort"
strip = "symbols"
