[workspace]
resolver = "3"
members = ["agent", "decoder", "filesystem-iter"]

[workspace.dependencies]
agent.path = "./agent"
anyhow = "1.0.100"
bytes = "1.10.1"
clap = { version = "4.5.50", features = ["derive"] }
filesystem-iter.path = "./filesystem-iter"
futures = "0.3.31"
log = "0.4.28"
lz4_flex = "0.11.5"
md-5 = "0.10.6"
rkyv = { version = "0.8.12", features = ["bytes-1"] }
sha3 = "0.10.8"
simplelog = "0.12.2"
sysinfo = "0.37.2"
tokio = { version = "1.48.0", features = ["full"] }

[profile.release]
lto = "fat"
panic = "abort"
strip = "symbols"
