[package]
edition = "2024"
name = "agent"
version = "0.1.0"

[lib]
name = "agentfs"
crate-type = ["staticlib"]

[[bin]]
name = "agent"

[dependencies]
anyhow.workspace = true
async-fn-stream = "0.3.2"
axum = { version = "0.8.6", features = ["ws"] }
bytes.workspace = true
clap = { workspace = true, features = ["derive"] }
filesystem-iter.workspace = true
futures.workspace = true
log.workspace = true
lz4_flex.workspace = true
md-5.workspace = true
normpath = "1.5.0"
rkyv.workspace = true
sha3.workspace = true
simplelog.workspace = true
sysinfo.workspace = true
tokio = { workspace = true, features = ["full"] }
