[package]
name = "decoder"
version = "0.1.0"
edition = "2024"

[dependencies]
agent.workspace = true
anyhow.workspace = true
bytes.workspace = true
clap = { workspace = true, features = ["derive"] }
md-5.workspace = true
rkyv.workspace = true
sha3.workspace = true
tokio = { workspace = true, features = ["full"] }
