[package]
name = "filesystem-iter"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
fauxgen = "0.1.5"
globset = "0.4.16"
indexmap = "2.9.0"
log.workspace = true
nom = "8.0.0"
walkdir = "2.5.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.1", features = ["Win32_Storage_FileSystem"] }
