[package]
name = "filesystem-iter"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
fauxgen = "0.1.5"
globset = "0.4.18"
indexmap = "2.12.0"
log.workspace = true
walkdir = "2.5.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Win32_Storage_FileSystem"] }
